--- a/public/style.css
+++ b/public/style.css
@@ -55,7 +55,7 @@ Last Update: Dec 05, 2018
 @import url(css/bootstrap.min.css);
 @import url(css/animate.css);
 @import url(css/default-assets/classy-nav.css);
-@import url(css/owl.carousel.min.css);
+/*@import url(css/owl.carousel.min.css);*/
 @import url(css/magnific-popup.css);
 @import url(css/font-awesome.min.css);
 @import url(css/style.css);
@@ -102,6 +102,10 @@ p {
 img {
   max-width: 100%;
   height: auto; }
+
+  .ominitrix{
+   width: 80%;
+  }
 
 ul {
   margin: 0;
